--- a/sweatshirt.html
+++ b/sweatshirt.html
@@ -59,12 +59,13 @@
         <div><h1 class="text-3xl font-bold mb-8 text-center">Sweatshirt</h1></div>
         <div style="display: flex; flex-wrap: wrap; gap: 16px; justify-content: center;">
             <div class="card" style="width: 18rem;">
-                <img src="./assets/sweatshirt/71464575_0.webp" class="card-img-top" alt="...">
+                <img src="assets/produto_01.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h3 class="card-title">Card title</h3>
-                    <p class="card-text">Cores:Preto, Cinza, Branco</p>
-                    
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h3 class="card-title">A space opera in deep Crewneck Sweatshirt</h3>
+                    <p class="card-text">$35</p>
+                    <a 
+                    href="https://www.teepublic.com/t-shirt/71579281-cosmic-globe-blood-baby?store_id=3624237" 
+                    class="btn btn-primary">VER MAIS OPÇÕES!</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
